--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -182,6 +182,7 @@ jobs:
       - name: Build theme
         run: |
           docker network create frontend
+          docker compose run --rm node yarn config set '//npm.fontawesome.com/:_authToken' "${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}"
           docker compose run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_project_theme install
           docker compose run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme install
           docker compose run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme build
