--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -176,13 +176,16 @@ jobs:
   theme-build:
     name: Check that theme can be built
     runs-on: ubuntu-latest
+    env:
+      FONTAWESOME_PACKAGE_TOKEN: ${{ secrets.FONTAWESOME_PACKAGE_TOKEN }}
     steps:
       - uses: actions/checkout@v4
 
       - name: Build theme
         run: |
+          echo "token: $FONTAWESOME_PACKAGE_TOKEN"  
           docker network create frontend
-          docker compose run --rm node yarn config set '//npm.fontawesome.com/:_authToken' "${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}"
+          docker compose run --rm node yarn config set '//npm.fontawesome.com/:_authToken' "$FONTAWESOME_PACKAGE_TOKEN"
           docker compose run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_project_theme install
           docker compose run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme install
           docker compose run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme build
