--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -184,6 +184,7 @@ jobs:
       - name: Build theme
         run: |  
           docker network create frontend
+          echo "Test token: $FONTAWESOME_PACKAGE_TOKEN"  
           docker compose run --rm node yarn config set '//npm.fontawesome.com/:_authToken' "$FONTAWESOME_PACKAGE_TOKEN"
           docker compose run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_project_theme install
           docker compose run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme install
