--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -185,9 +185,9 @@ jobs:
         run: |  
           docker network create frontend
           echo "Test token: $FONTAWESOME_PACKAGE_TOKEN"
-          docker compose run --rm node -e FONTAWESOME_PACKAGE_TOKEN yarn --cwd /app/web/themes/custom/itkdev/itkdev_project_theme install
-          docker compose run --rm node -e FONTAWESOME_PACKAGE_TOKEN yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme install
-          docker compose run --rm node -e FONTAWESOME_PACKAGE_TOKEN yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme build
+          docker compose run --rm -e FONTAWESOME_PACKAGE_TOKEN node yarn --cwd /app/web/themes/custom/itkdev/itkdev_project_theme install
+          docker compose run --rm -e FONTAWESOME_PACKAGE_TOKEN node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme install
+          docker compose run --rm -e FONTAWESOME_PACKAGE_TOKEN node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme build
 
   run-module-tests:
     name: Run module tests
