--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -17,6 +17,7 @@ jobs:
     env:
       COMPOSER_ALLOW_SUPERUSER: 1
       APP_ENV: prod
+      FONTAWESOME_PACKAGE_TOKEN: ${{ secrets.FONTAWESOME_PACKAGE_TOKEN }}
     steps:
       - name: Install Task
         uses: arduino/setup-task@v2
