--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -124,9 +124,9 @@ tasks:
   theme-build:
     desc: "Build theme"
     cmds:
-      - task compose -- run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_project_theme install
-      - task compose -- run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme install
-      - task compose -- run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme build
+      - task compose -- run --rm -e FONTAWESOME_PACKAGE_TOKEN node yarn --cwd /app/web/themes/custom/itkdev/itkdev_project_theme install
+      - task compose -- run --rm -e FONTAWESOME_PACKAGE_TOKEN node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme install
+      - task compose -- run --rm -e FONTAWESOME_PACKAGE_TOKEN node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme build
 
   theme-clean-up:
     desc: "Clean up theme building"
@@ -138,7 +138,7 @@ tasks:
     desc: "Build theme and watch for changes"
     cmds:
       - task theme-build
-      - task compose -- run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme watch
+      - task compose -- run --rm -e FONTAWESOME_PACKAGE_TOKEN node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme watch
 
   simulate-github-actions:
     desc: "Simulate most github actions to prepare the code and catch errors before github does"
