--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "drupal/core-dev": "^11.0",
         "drupal/masquerade": "^2.0",
         "drupal/potx": "^1.1",
-        "drupal/webprofiler": "11.1.0",
+        "drupal/webprofiler": "^11.1",
         "ergebnis/composer-normalize": "^2.43",
         "mglaman/phpstan-drupal": "^1.1",
         "phpstan/extension-installer": "^1.2",
