--- a/.woodpecker/stg.yml
+++ b/.woodpecker/stg.yml
@@ -34,7 +34,7 @@ steps:
         - itkdev-docker-compose-server up -d --force-recreate --remove-orphans
         # Build theme
         - itkdev-docker-compose-server run --rm -e PLUGIN_FONTAWESOME_PACKAGE_TOKEN node yarn --cwd /app/web/themes/custom/itkdev/itkdev_project_theme install
-        - itkdev-docker-compose-server run --rm -e PLUGIN_FONTAWESOME_PACKAGE_TOKEN node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme install
+        - itkdev-docker-compose-server run --rm -e FONTAWESOME_PACKAGE_TOKEN=${PLUGIN_FONTAWESOME_PACKAGE_TOKEN} node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme install
         - itkdev-docker-compose-server run --rm -e PLUGIN_FONTAWESOME_PACKAGE_TOKEN node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme build
         # Ensure everything is owned by deploy
         - sudo chown -R deploy:deploy web
