Updated form changes

--- a/config/sync/webform.webform.complexity_uncertainty_default.yml
+++ b/config/sync/webform.webform.complexity_uncertainty_default.yml
@@ -9,7 +9,7 @@ uid: 1
 template: false
 archive: false
 id: complexity_uncertainty_default
-title: Kompleksitet
+title: 'Kompleksitet og Usikkerhed'
 description: ''
 categories: {  }
 elements: |-
