Added ignore for abandoned package doctrine/annotations until drupal fixes it

--- a/composer.json
+++ b/composer.json
@@ -77,7 +77,12 @@
             "phpstan/extension-installer": true,
             "tbachert/spi": true
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "audit": {
+            "ignore-abandoned": [
+                "doctrine/annotations"
+            ]
+        }
     },
     "extra": {
         "drupal-core-project-message": {
@@ -87,7 +92,7 @@
             ],
             "post-create-project-cmd-message": [
                 "<bg=blue;fg=white>                                                         </>",
-                "<bg=blue;fg=white>  Congratulations, you’ve installed the Drupal codebase  </>",
+                "<bg=blue;fg=white>  Congratulations, you've installed the Drupal codebase  </>",
                 "<bg=blue;fg=white>  from the drupal/recommended-project template!          </>",
                 "<bg=blue;fg=white>                                                         </>",
                 "",
