Fixed CVEs, updated drupal/core-recommended and twig-cs-fixer and ran coding standards

--- a/web/modules/custom/ai_screening_project/ai_screening_project.services.yml
+++ b/web/modules/custom/ai_screening_project/ai_screening_project.services.yml
@@ -6,7 +6,7 @@ services:
   Drupal\ai_screening_project\Helper\ProjectHelper:
     autowire: true
     arguments:
-      $logger:  '@logger.channel.ai_screening_project'
+      - '@logger.channel.ai_screening_project'
     tags:
       - { name: event_subscriber }
 
