--- a/web/modules/custom/ai_screening_project_track/ai_screening_project_track.services.yml
+++ b/web/modules/custom/ai_screening_project_track/ai_screening_project_track.services.yml
@@ -6,14 +6,13 @@ services:
   Drupal\ai_screening_project_track\Helper\ProjectTrackHelper:
     autowire: true
     arguments:
-      $logger: '@logger.channel.ai_screening_project_track'
+      - '@logger.channel.ai_screening_project_track'
     tags:
       - { name: event_subscriber }
 
   Drupal\ai_screening_project_track\Helper\ProjectTrackToolHelper:
-    autowire: true
     arguments:
-      $logger: '@logger.channel.ai_screening_project_track'
+      - '@logger.channel.ai_screening_project_track'
     tags:
       - { name: event_subscriber }
 
