--- a/config/sync/node.type.project.yml
+++ b/config/sync/node.type.project.yml
@@ -2,7 +2,7 @@ uuid: d299813b-c037-45a7-9a4b-c0738e8e08de
 langcode: en
 status: true
 dependencies: {}
-name: Project
+name: Screening
 type: project
 description: null
 help: null
