--- a/config/sync/taxonomy.vocabulary.project_track_type.yml
+++ b/config/sync/taxonomy.vocabulary.project_track_type.yml
@@ -2,8 +2,8 @@ uuid: 4196ab15-1d8d-4aa1-8a15-e83539d6ab1f
 langcode: en
 status: true
 dependencies: {}
-name: "Project track type"
+name: "Screening track type"
 vid: project_track_type
-description: "Project tracks are used to group tools to represent a unified evaluation of part of a project"
+description: "Screening tracks are used to group tools to represent a unified evaluation of part of a screening"
 weight: 0
 new_revision: false
