--- a/config/sync/field.field.node.project.field_department.yml
+++ b/config/sync/field.field.node.project.field_department.yml
@@ -11,7 +11,7 @@ field_name: field_department
 entity_type: node
 bundle: project
 label: Department
-description: "Hvilken magistratsafdeling hører screeningen under"
+description: "Hvilke magistratsafdelinger screeningen hører under"
 required: true
 translatable: false
 default_value: {}
