Updated OIDC development setup

--- a/config/sync/openid_connect.client.generic.yml
+++ b/config/sync/openid_connect.client.generic.yml
@@ -10,10 +10,10 @@ settings:
   client_secret: client-secret
   iss_allowed_domains: ""
   issuer_url: ""
-  authorization_endpoint: "http://idp.ai-screening.local.itkdev.dk/connect/authorize"
-  token_endpoint: "http://idp.ai-screening.local.itkdev.dk/connect/token"
+  authorization_endpoint: "http://idp.ai-screening.local.itkdev.dk/oauth2/authorize"
+  token_endpoint: "http://idp.ai-screening.local.itkdev.dk/oauth2/token"
   userinfo_endpoint: ""
-  end_session_endpoint: "http://idp.ai-screening.local.itkdev.dk/connect/endsession"
+  end_session_endpoint: "http://idp.ai-screening.local.itkdev.dk/oauth2/end_session"
   scopes:
     - openid
     - email
