--- a/config/sync/views.view.projects.yml
+++ b/config/sync/views.view.projects.yml
@@ -390,7 +390,7 @@ display:
           type: entity_reference_label
           settings:
             link: false
-          group_column: target_id
+          group_column: entity_id
           group_columns: {}
           group_rows: true
           delta_limit: 0
