Handled published state

--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -42,6 +42,7 @@ module:
   page_cache: 0
   path_alias: 0
   preprocess_event_dispatcher: 0
+  publishcontent: 0
   system: 0
   taxonomy: 0
   text: 0
