--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "drupal/group": "^3.3",
         "drupal/hook_event_dispatcher": "^4.2",
         "drupal/openid_connect": "dev-3452009-drupal-11-compatibility",
+        "drupal/publishcontent": "^1.7",
         "drupal/twig_tweak": "^3.4",
         "drupal/webform": "^6.0@dev",
         "drush/drush": "^13.2",
