--- a/config/sync/core.entity_form_display.node.project.default.yml
+++ b/config/sync/core.entity_form_display.node.project.default.yml
@@ -32,7 +32,8 @@ third_party_settings:
     group_state:
       children:
         - field_project_state
-      label: State
+        - status
+      label: Tilstand
       region: content
       parent_name: ""
       weight: 1
@@ -71,6 +72,13 @@ content:
     region: content
     settings: {}
     third_party_settings: {}
+  status:
+    type: boolean_checkbox
+    weight: 9
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {}
   title:
     type: string_textfield
     weight: 1
@@ -83,6 +91,5 @@ hidden:
   created: true
   langcode: true
   promote: true
-  status: true
   sticky: true
   uid: true
