--- a/config/sync/openid_connect.settings.yml
+++ b/config/sync/openid_connect.settings.yml
@@ -4,7 +4,7 @@ always_save_userinfo: true
 connect_existing_users: true
 override_registration_settings: false
 end_session_enabled: true
-user_login_display: above
+user_login_display: replace
 redirect_login: /user
 redirect_logout: /user
 userinfo_mappings:
