5714: Denied access to “Reset password”. Cleaned up login block.

--- a/web/modules/custom/ai_screening/ai_screening.services.yml
+++ b/web/modules/custom/ai_screening/ai_screening.services.yml
@@ -23,3 +23,7 @@ services:
       $logger: "@logger.channel.ai_screening"
     tags:
       - { name: event_subscriber }
+
+  Drupal\ai_screening\EventSubscriber\PasswordSubscriber:
+    tags:
+      - { name: event_subscriber }
