--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -104,17 +104,15 @@ jobs:
   theme-build:
     name: Check that theme can be built
     runs-on: ubuntu-latest
-    env:
-      FONTAWESOME_PACKAGE_TOKEN: ${{ secrets.FONTAWESOME_PACKAGE_TOKEN }}
     steps:
       - uses: actions/checkout@v4
 
       - name: Build theme
         run: |
           docker network create frontend
-          docker compose run --rm -e FONTAWESOME_PACKAGE_TOKEN node yarn --cwd /app/web/themes/custom/itkdev/itkdev_project_theme install
-          docker compose run --rm -e FONTAWESOME_PACKAGE_TOKEN node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme install
-          docker compose run --rm -e FONTAWESOME_PACKAGE_TOKEN node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme build
+          docker compose run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_project_theme install
+          docker compose run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme install
+          docker compose run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme build
 
   run-module-tests:
     name: Run module tests
