--- a/config/sync/group.role.project_group-member.yml
+++ b/config/sync/group.role.project_group-member.yml
@@ -20,3 +20,4 @@ permissions:
   - "view group"
   - "view group_membership relationship"
   - "view group_node:project entity"
+  - "view unpublished group_node:project entity"
