--- a/config/sync/views.view.projects.yml
+++ b/config/sync/views.view.projects.yml
@@ -99,6 +99,73 @@ display:
           multi_type: separator
           separator: ", "
           field_api_classes: false
+        status:
+          id: status
+          table: node_field_data
+          field: status
+          relationship: none
+          group_type: group
+          admin_label: ""
+          entity_type: node
+          entity_field: status
+          plugin_id: field
+          label: Publiseret
+          exclude: true
+          alter:
+            alter_text: false
+            text: ""
+            make_link: false
+            path: ""
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ""
+            rel: ""
+            link_class: ""
+            prefix: ""
+            suffix: ""
+            target: ""
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ""
+            more_link_path: ""
+            strip_tags: false
+            trim: false
+            preserve_tags: ""
+            html: false
+          element_type: ""
+          element_class: ""
+          element_label_type: ""
+          element_label_class: ""
+          element_label_colon: false
+          element_wrapper_type: ""
+          element_wrapper_class: ""
+          element_default_classes: true
+          empty: ""
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: boolean
+          settings:
+            format: boolean
+            format_custom_false: ""
+            format_custom_true: ""
+          group_column: value
+          group_columns: {}
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ", "
+          field_api_classes: false
         field_description:
           id: field_description
           table: node__field_description
@@ -175,7 +242,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<h4>{{ title }}</h4>\r\n{{ field_description }}"
+            text: "<h4>{{ title }}</h4>\r\n{# @todo Do we want to show this?\r\n{% if status != '1' %}<div class=\"project-status not-published\">{{ 'Not published'|trans }}</div>{% endif %}\r\n#}\r\n{{ field_description }}"
             make_link: false
             path: ""
             absolute: false
@@ -707,17 +774,6 @@ display:
       sorts: {}
       arguments: {}
       filters:
-        status:
-          id: status
-          table: node_field_data
-          field: status
-          entity_type: node
-          entity_field: status
-          plugin_id: boolean
-          value: "1"
-          group: 1
-          expose:
-            operator: ""
         type:
           id: type
           table: node_field_data
@@ -728,6 +784,45 @@ display:
           value:
             project: project
           group: 1
+        status_extra:
+          id: status_extra
+          table: node_field_data
+          field: status_extra
+          relationship: none
+          group_type: group
+          admin_label: ""
+          entity_type: node
+          plugin_id: node_status
+          operator: "="
+          value: false
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ""
+            label: ""
+            description: ""
+            use_operator: false
+            operator: ""
+            operator_limit_selection: false
+            operator_list: {}
+            identifier: ""
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+          is_grouped: false
+          group_info:
+            label: ""
+            description: ""
+            identifier: ""
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {}
+            group_items: {}
         combine:
           id: combine
           table: views
