--- a/config/sync/views.view.projects.yml
+++ b/config/sync/views.view.projects.yml
@@ -704,23 +704,7 @@ display:
         type: tag
         options: {}
       empty: {}
-      sorts:
-        created:
-          id: created
-          table: node_field_data
-          field: created
-          relationship: none
-          group_type: group
-          admin_label: ""
-          entity_type: node
-          entity_field: created
-          plugin_id: date
-          order: DESC
-          expose:
-            label: ""
-            field_identifier: ""
-          exposed: false
-          granularity: second
+      sorts: {}
       arguments: {}
       filters:
         status:
@@ -930,10 +914,13 @@ display:
             nid: nid
             field_description: field_description
             title: title
+            field_project_state: field_project_state
             nothing: nothing
             field_department: field_department
-            field_name: field_name
-          default: "-1"
+            name: name
+            created: created
+            changed: changed
+          default: created
           info:
             nid:
               sortable: false
@@ -956,19 +943,38 @@ display:
               separator: ""
               empty_column: false
               responsive: ""
+            field_project_state:
+              sortable: false
+              default_sort_order: asc
+              align: ""
+              separator: ""
+              empty_column: false
+              responsive: ""
             nothing:
               align: ""
               separator: ""
               empty_column: false
               responsive: ""
             field_department:
-              sortable: true
+              align: ""
+              separator: ""
+              empty_column: false
+              responsive: ""
+            name:
+              sortable: false
               default_sort_order: asc
               align: ""
               separator: ""
               empty_column: false
               responsive: ""
-            field_name:
+            created:
+              sortable: true
+              default_sort_order: desc
+              align: ""
+              separator: ""
+              empty_column: false
+              responsive: ""
+            changed:
               sortable: true
               default_sort_order: asc
               align: ""
@@ -981,6 +987,7 @@ display:
           empty_table: false
           caption: ""
           description: ""
+          class: ""
       row:
         type: fields
       query:
