--- a/config/sync/views.view.front.yml
+++ b/config/sync/views.view.front.yml
@@ -236,7 +236,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<div class=\"inline-flex items-center\">\r\n{% include '@itkdev_project_theme/components/badge.html.twig' with { label: status != '1' ? 'Not published'|trans, additional_class_names: 'mr-3' } %}\r\n<h4>{{ title }}</h4>\r\n</div>\r\n{{ field_description }}"
+            text: "<div class=\"inline-flex items-center\">\r\n{% include '@itkdev_project_theme/components/badge.html.twig' with { label: status != '1' ? 'Not published'|trans(options: {context: 'project'}), additional_class_names: 'mr-3' } %}\r\n<h4>{{ title }}</h4>\r\n</div>\r\n{{ field_description }}"
             make_link: false
             path: ""
             absolute: false
