--- a/config/sync/core.base_field_override.node.project.title.yml
+++ b/config/sync/core.base_field_override.node.project.title.yml
@@ -1,5 +1,5 @@
-uuid: 32b2fcaa-2003-426c-8cf1-d8275e4239c6
-langcode: da
+uuid: 04f5814c-ade3-4e03-84f3-494048b7d19d
+langcode: en
 status: true
 dependencies:
   config:
@@ -8,7 +8,7 @@ id: node.project.title
 field_name: title
 entity_type: node
 bundle: project
-label: Titel
+label: Title
 description: ""
 required: true
 translatable: true
