--- a/config/sync/core.base_field_override.node.project.title.yml
+++ b/config/sync/core.base_field_override.node.project.title.yml
@@ -8,7 +8,7 @@ id: node.project.title
 field_name: title
 entity_type: node
 bundle: project
-label: Title
+label: Name
 description: ""
 required: true
 translatable: true
