--- a/web/modules/custom/ai_screening_project_track/ai_screening_project_track.info.yml
+++ b/web/modules/custom/ai_screening_project_track/ai_screening_project_track.info.yml
@@ -1,4 +1,4 @@
-name: AI Screening project track
+name: AI Project project track
 description: Adds project track entity and functionality
 package: "Custom"
 type: module
