6814: Added webform descriptions

--- a/config/sync/webform.webform.ethics_default.yml
+++ b/config/sync/webform.webform.ethics_default.yml
@@ -10,7 +10,7 @@ template: false
 archive: false
 id: ethics_default
 title: Etik
-description: ""
+description: "<p>Bør vi?</p>"
 categories: {}
 elements: |-
   borger_page:
@@ -232,6 +232,7 @@ settings:
   form_access_denied_message: ""
   form_access_denied_attributes: {}
   form_file_limit: ""
+  form_file_limit_message: ""
   form_attributes: {}
   form_method: ""
   form_action: ""
