--- a/config/sync/webform.webform.complexity_uncertainty_default.yml
+++ b/config/sync/webform.webform.complexity_uncertainty_default.yml
@@ -10,7 +10,7 @@ template: false
 archive: false
 id: complexity_uncertainty_default
 title: "Kompleksitet og Usikkerhed"
-description: ""
+description: "<p>Kan vi?</p>"
 categories: {}
 elements: |-
   kompleksitet:
@@ -160,6 +160,7 @@ settings:
   form_access_denied_message: ""
   form_access_denied_attributes: {}
   form_file_limit: ""
+  form_file_limit_message: ""
   form_attributes: {}
   form_method: ""
   form_action: ""
