--- a/config/sync/webform.webform.law_default.yml
+++ b/config/sync/webform.webform.law_default.yml
@@ -10,7 +10,7 @@ template: false
 archive: false
 id: law_default
 title: Jura
-description: ""
+description: "<p>Må vi?</p>"
 categories: {}
 elements: |-
   maa_vi:
@@ -193,6 +193,7 @@ settings:
   form_access_denied_message: ""
   form_access_denied_attributes: {}
   form_file_limit: ""
+  form_file_limit_message: ""
   form_attributes: {}
   form_method: ""
   form_action: ""
