6814: Refactored to prepare for additional computer

--- a/web/modules/custom/ai_screening_project_track/ai_screening_project_track.services.yml
+++ b/web/modules/custom/ai_screening_project_track/ai_screening_project_track.services.yml
@@ -13,6 +13,8 @@ services:
   Drupal\ai_screening_project_track\Helper\ProjectTrackToolHelper:
     autowire: true
     arguments:
+      $computers:
+        !tagged_iterator { tag: "ai_screening.project_track_tool_computer" }
       $logger: "@logger.channel.ai_screening_project_track"
     tags:
       - { name: event_subscriber }
@@ -28,3 +30,11 @@ services:
   Drupal\ai_screening_project_track\Theme\ThemeNegotiator:
     tags:
       - { name: theme_negotiator, priority: 1000 }
+
+  Drupal\ai_screening_project_track\Computer\WebformSubmissionProjectTrackToolComputer:
+
+  Drupal\ai_screening_project_track\Computer\WeightedRadiosComputer:
+    tags: ["ai_screening.project_track_tool_computer"]
+
+  Drupal\ai_screening_project_track\Computer\YesNoStopComputer:
+    tags: ["ai_screening.project_track_tool_computer"]
