--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "docs": "https://www.drupal.org/docs/user_guide/en/index.html"
     },
     "require": {
-        "php": "^8.3",
+        "php": "^8.4",
+        "ext-dom": "*",
+        "ext-libxml": "*",
         "chx/drupal-issue-fork": "dev-main",
         "composer/installers": "^2.0",
         "cweagans/composer-patches": "^1.7",
