--- a/composer.json
+++ b/composer.json
@@ -33,14 +33,15 @@
     },
     "require-dev": {
         "drupal/content_fixtures": "^3.2",
-        "drupal/core-dev": "^11.0",
+        "drupal/core-dev": "^11.2",
         "drupal/masquerade": "^2.0",
         "drupal/potx": "^1.1",
         "drupal/webprofiler": "^11.1",
         "ergebnis/composer-normalize": "^2.43",
-        "mglaman/phpstan-drupal": "^1.1",
-        "phpstan/extension-installer": "^1.2",
-        "phpstan/phpstan-deprecation-rules": "^1.1",
+        "mglaman/phpstan-drupal": "^2.0",
+        "phpstan/extension-installer": "^1.4",
+        "phpstan/phpstan": "^2.1",
+        "phpstan/phpstan-deprecation-rules": "^2.0",
         "vincentlanglet/twig-cs-fixer": "^3.0"
     },
     "conflict": {
